--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
   },
   "dependencies": {
     "@types/node": "^22.13.11",
+    "dotenv": "^16.5.0",
     "fastify": "^5.2.1",
     "knex": "^3.1.0",
     "sqlite3": "^5.1.7"
