--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
     "dotenv": "^16.5.0",
     "fastify": "^5.2.1",
     "knex": "^3.1.0",
-    "sqlite3": "^5.1.7"
+    "sqlite3": "^5.1.7",
+    "zod": "^3.24.3"
   }
 }
