--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "typescript-eslint": "^8.27.0"
   },
   "dependencies": {
+    "@fastify/cookie": "^11.0.2",
     "@types/node": "^22.13.11",
     "dotenv": "^16.5.0",
     "fastify": "^5.2.1",
