--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
   "description": "",
   "devDependencies": {
     "@eslint/js": "^9.23.0",
+    "@types/supertest": "^6.0.3",
     "@typescript-eslint/eslint-plugin": "^8.27.0",
     "@typescript-eslint/parser": "^8.27.0",
     "eslint": "^9.23.0",
@@ -31,6 +32,7 @@
     "fastify": "^5.2.1",
     "knex": "^3.1.0",
     "sqlite3": "^5.1.7",
+    "supertest": "^7.1.0",
     "zod": "^3.24.3"
   }
 }
